--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,8 @@
 
 }
 
+/* globales*/
+
 html{
     font-size: 62.5%;
     box-sizing: border-box;
@@ -21,21 +23,56 @@ body{
     font-family: 'Krub', sans-serif;
 }
 
-
-.titulo{
-    text-align: center;
-    font-size: 3.8rem;
-    
+.contenedor{
+    max-width: 120rem;
+    margin: 0 auto;
 }
+
+.boton{
+    background-color: var(--secundario);
+    color: var(--blanco);
+    padding: 1rem 3rem;
+    margin-top: 3rem;
+    font-size: 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: .5rem;
+    width:90% ;
+    text-align: center;
+}
+
+@media (min-width: 768px ) {
+    .boton{
+        width: auto;
+    }
+}
+
+/* tipografia */
+
+h1{
+    font-size: 3.8rem;
+}
+
+h2{
+    font-size: 2.8rem;
+}
+
+h3{
+    font-size: 1.8rem;
+}
+
+h1,h2,h3{
+    text-align: center;
+}
+
+/* tiutlos*/
 
 .titulo span{
     font-size:2rem ;
 }
 
-.contenedor{
-    max-width: 120rem;
-    margin: 0 auto;
-}
+/* navigacion principal*/
 
 .nav-bg{
      background-color: var(--secundario);
@@ -69,11 +106,35 @@ body{
     color: var(--oscuro);
 }
 
+/* Hero*/
 
 .hero{
     background-image: url(../img/prueba.jpg);
     background-repeat: none;
     background-size: cover;
     height: 450px;
-    padding: 20px;
+    position: relative;
+}
+
+
+.contenido-hero{
+    position: absolute;
+    background-color: rgba(0,0,0, .5);
+    background-color: rgb(0 0 0 /50%);/* anterior*/
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10%;
+}
+
+.contenido-hero h2,
+.contenido-hero p{
+    color: var(--blanco);
+}
+
+.contenido-hero.ubicacion{
+    display: flex;
+    align-items: flex-end;
 }
