--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     --oscuro:#212121;
     --secundario:#0097a7;
     --gris:#757575;
+    --grisClaro: #DFE9F3;
 
 }
 
@@ -21,6 +22,7 @@ html{
 body{
     font-size: 16px;
     font-family: 'Krub', sans-serif;
+    background-image: linear-gradient(to top, var(--grisClaro) 0%, var(--blanco) 100%);
 }
 
 .contenedor{
@@ -46,6 +48,13 @@ body{
     .boton{
         width: auto;
     }
+}
+
+.sombra{
+    box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.55);
+    background-color: var(--blanco);
+    padding: 2rem;
+    border-radius: 1rem;
 }
 
 /* tipografia */
@@ -114,6 +123,7 @@ h1,h2,h3{
     background-size: cover;
     height: 450px;
     position: relative;
+    margin-bottom: 2rem;
 }
 
 
@@ -138,3 +148,15 @@ h1,h2,h3{
     display: flex;
     align-items: flex-end;
 }
+
+
+/* Servicios*/
+@media (min-width: 768px) {
+    .servicios{
+        display: grid;
+        grid-template-columns: repeat (3, 1fr);
+}
+}
+
+
+
