--- a/css/styles.css
+++ b/css/styles.css
@@ -1,36 +1,38 @@
-:root{
-    --blanco:#ffffff;
-    --primario:#ffc107;
-    --oscuro:#212121;
-    --secundario:#0097a7;
-    --gris:#757575;
+:root {
+    --blanco: #ffffff;
+    --primario: #ffc107;
+    --oscuro: #212121;
+    --secundario: #0097a7;
+    --gris: #757575;
     --grisClaro: #DFE9F3;
 
 }
 
 /* globales*/
 
-html{
+html {
     font-size: 62.5%;
     box-sizing: border-box;
 }
 
-*, *:before, *:after {
-  box-sizing: inherit;
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
 }
 
-body{
+body {
     font-size: 16px;
     font-family: 'Krub', sans-serif;
     background-image: linear-gradient(to top, var(--grisClaro) 0%, var(--blanco) 100%);
 }
 
-.contenedor{
+.contenedor {
     max-width: 120rem;
     margin: 0 auto;
 }
 
-.boton{
+.boton {
     background-color: var(--secundario);
     color: var(--blanco);
     padding: 1rem 3rem;
@@ -40,18 +42,23 @@ body{
     text-transform: uppercase;
     font-weight: bold;
     border-radius: .5rem;
-    width:90% ;
+    width: 90%;
     text-align: center;
+    border: none;
 }
 
-@media (min-width: 768px ) {
-    .boton{
+.boton :hover {
+    cursor: pointer;
+}
+
+@media (min-width: 768px) {
+    .boton {
         width: auto;
     }
 }
 
-.sombra{
-    box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.55);
+.sombra {
+    box-shadow: 0px 5px 15px 0px rgba(112, 112, 112, 0.55);
     background-color: var(--blanco);
     padding: 2rem;
     border-radius: 1rem;
@@ -59,35 +66,57 @@ body{
 
 /* tipografia */
 
-h1{
+h1 {
     font-size: 3.8rem;
 }
 
-h2{
+h2 {
     font-size: 2.8rem;
 }
 
-h3{
+h3 {
     font-size: 1.8rem;
 }
 
-h1,h2,h3{
+h1,
+h2,
+h3 {
     text-align: center;
 }
 
 /* tiutlos*/
 
-.titulo span{
-    font-size:2rem ;
+.titulo span {
+    font-size: 2rem;
+}
+
+/*Utilidades*/
+
+.w-sm-100 {
+    width: 100%;
+}
+
+@media (min-width: 768px) {
+    .w-sm-100 {
+       width:auto;
+}
+}
+
+.flex {
+    display: flex;
+}
+
+.alinear-derecha {
+    justify-content: flex-end;
 }
 
 /* navigacion principal*/
 
-.nav-bg{
-     background-color: var(--secundario);
+.nav-bg {
+    background-color: var(--secundario);
 }
 
-.principal-navigacion{
+.principal-navigacion {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -95,29 +124,29 @@ h1,h2,h3{
 
 @media (min-width: 768px) {
 
-.principal-navigacion{
-    flex-direction: row;
-    justify-content: space-between;
-}
-    
+    .principal-navigacion {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
 }
 
-.principal-navigacion a{
+.principal-navigacion a {
     color: var(--blanco);
     text-decoration: none;
     font-size: 2rem;
-    font-weight:700 ;
+    font-weight: 700;
     padding: 1rem;
 }
 
-.principal-navigacion a:hover{
+.principal-navigacion a:hover {
     background-color: var(--primario);
     color: var(--oscuro);
 }
 
 /* Hero*/
 
-.hero{
+.hero {
     background-image: url(../img/prueba.jpg);
     background-repeat: none;
     background-size: cover;
@@ -127,24 +156,26 @@ h1,h2,h3{
 }
 
 
-.contenido-hero{
+.contenido-hero {
     position: absolute;
-    background-color: rgba(0,0,0, .5);
-    background-color: rgb(0 0 0 /50%);/* anterior*/
+    background-color: rgba(0, 0, 0, .5);
+    background-color: rgb(0 0 0 /50%);
+    /* anterior*/
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10%;
+    padding: 5%;
+
 }
 
 .contenido-hero h2,
-.contenido-hero p{
+.contenido-hero p {
     color: var(--blanco);
 }
 
-.contenido-hero.ubicacion{
+.contenido-hero.ubicacion {
     display: flex;
     align-items: flex-end;
 }
@@ -153,12 +184,111 @@ h1,h2,h3{
 /* Servicios*/
 
 @media (min-width: 768px) {
-    .servicios{
-       display: grid;
-       grid-template-columns: repeat(3, 1fr);
-}
+    .servicios {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 1rem;
+    }
 
 }
 
+.servicio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.servicio h3 {
+    color: var(--secundario);
+    font-weight: normal;
+}
+
+.servicio p {
+    line-height: 2;
+    text-align: center;
+}
+
+.servicio .iconos {
+    height: 15rem;
+    width: 15rem;
+    background-color: var(--primario);
+    border-radius: 20%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
 
 
+/* contacto*/
+
+.formulario {
+    background-color: var(--gris);
+    width: min(60rem, 100%);
+    /*esto utiliza el valor mas pequeño*/
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 1rem;
+}
+
+.formulario fieldset {
+    border: none;
+}
+
+.formulario legend {
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    color: var(--primario);
+}
+
+
+
+@media (min-width: 768px) {
+    .contenedor-campos{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: auto auto 20rem;
+        column-gap: 1rem;
+    }
+
+    .campo:nth-child(3),
+    .campo:nth-child(4) {
+        grid-column: 1/3;
+    }
+}
+
+
+
+.campo {
+    margin-bottom: 1rem;
+}
+
+.campo label {
+    color: var(--blanco);
+    font-weight: bold;
+    margin-bottom: 5rem;
+    display: block;
+}
+
+.campo textarea{
+    height: 20rem;
+    resize: none;
+}
+
+.input-text {
+    width: 100%;
+    border: none;
+    padding: 1.5rem;
+    border-radius: .5rem;
+}
+
+.enviar .boton {
+    width: 100%;
+}
+
+/*footer*/
+.footer{
+    text-align: center;
+}
