--- a/css/styles.css
+++ b/css/styles.css
@@ -269,13 +269,13 @@ h3 {
 }
 
 .campo {
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
 }
 
 .campo label {
     color: var(--blanco);
     font-weight: bold;
-    margin-bottom: 5rem;
+    margin-bottom: -2px;
     display: block;
 }
 
@@ -293,8 +293,16 @@ h3 {
     border-radius: .5rem;
 }
 
+
+/* Boton*/
+
 .enviar .boton {
     width: 100%;
+}
+
+.alinear-derecha {
+    justify-content: space-around;
+    display: flex;
 }
 
 /*footer*/
